update .tmux.conf new session setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -163,3 +163,6 @@ set-window-option -g window-status-format " #I: #W "
 
 # カレントウィンドウの window-status のフォーマットを指定する
 set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+
+# tmux のセッション開始時にデフォルトでpaneを切る
+bind c new-window \; source-file ~/.tmux/new-session
