--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,164 +1,135 @@
-#utf setting
-set-window-option -g utf8 on
-set-window-option -g mode-keys vi
-set-window-option -g automatic-rename off
+# tmux settings
+# http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man1/tmux.1#x4f5054494f4e53
 
-# increase scroll buffer size
-set-option -g history-limit 10000
+# ----------------------------------------------------------------------
+# | General Settings                                                   |
+# ----------------------------------------------------------------------
 
-# set -g status-bg white
-# set -g status-fg black
+# Make window index start at 1
+set -g base-index 1
 
-set -s escape-time 0
-setw -g window-status-current-attr underscore
+# Make pane index start at 1
+setw -g pane-base-index 1
 
-# 256色ターミナル
-set-option -g default-terminal "screen-256color"
+# Remove delay when sending commands
+# (default is 500 milliseconds)
+set -sg escape-time 1
 
 
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
+# ----------------------------------------------------------------------
+# | Key Mappings                                                       |
+# ----------------------------------------------------------------------
 
-set-window-option -g mode-bg white
-set-window-option -g mode-fg black
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg white
-set-window-option -g window-status-current-bg blue
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-attr bold
+# Change the key combination for the PREFIX key to `ctrl-a`
+set -g prefix C-t
+unbind-key C-b
 
-set-window-option -g mode-mouse on
+# Make tmux send the PREFIX to an application running
+# within tmux simply by pressing PREFIX key twice
+bind C-t send-prefix
 
-# Set the prefix to ^T.
-unbind C-b
-set -g prefix ^T
-bind t send-prefix
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# Bind appropriate commands similar to screen.
-# lockscreen ^X x
-# unbind ^X
-# bind ^X lock-server
-# unbind x
-# bind x lock-server
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
 
-# screen ^C c
-unbind ^C
-bind ^C new-window -n zsh
-bind c new-window -n zsh
+# Workaround for accessing macOS' pasteboard
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 
-# detach ^D d
-unbind ^D
-bind ^D detach
+if-shell \
+    'test "$(uname -s)" = Darwin' \
+    'set-option -g default-command "exec reattach-to-user-namespace -l $SHELL"'
 
-# displays *
-unbind *
-bind * list-clients
+# Remap the copy & paste keys to work as in vim
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy "v" begin-selection
+bind -t vi-copy "y" copy-selection
 
-# next ^@ ^N sp n
-unbind ^@
-bind ^@ next-window
-unbind ^N
-bind ^N next-window
-unbind " "
-bind " " next-window
-unbind n
-bind n next-window
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# title A
-unbind A
-bind A command-prompt "rename-window %%"
+# [ PREFIX + - ] Split window horizontally
+bind - split-window -v
 
-# copy-mode ^[
-unbind ^"["
-bind -r ^"[" copy-mode
-unbind ^]
-bind -r ^] paste-buffer
+# [ PREFIX + | ] Split window vertically
+bind | split-window -h
 
-# other ^A
-unbind ^A
-bind ^A last-window
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# prev ^H ^P p ^?
-unbind BSpace
-bind BSpace previous-window
+# [ PREFIX + h/j/k/l ] Move from pane to pane
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-# windows ^W w
-unbind ^W
-bind ^W list-windows
-unbind w
-bind w list-windows
+# [ PREFIX + H/J/K/L ] Resize pane
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
-# kill K k
-unbind K
-bind K confirm-before "kill-window"
-unbind k
-bind k confirm-before "kill-window"
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# redisplay ^R r
-unbind ^R
-bind ^R refresh-client
-unbind r
-bind r refresh-client
+# [ PREFIX + r ] Reload tmux config
+bind r source-file ~/.tmux.conf \; display "tmux configs reloaded"
 
-# split -v |
-unbind |
-bind | split-window
 
-# :kB: focus up
-unbind Tab
-bind Tab select-pane -t :.-
-unbind BTab
-bind BTab select-pane -t :.+
-unbind ^H
-bind ^H select-pane -t :.-
-unbind h
-bind ^h select-pane -t :.-
-unbind ^L
-bind ^L select-pane -t :.+
-unbind l
-bind l select-pane -t :.+
+# ----------------------------------------------------------------------
+# | Status bar                                                         |
+# ----------------------------------------------------------------------
 
-# " windowlist -b
-unbind '"'
-bind '"' choose-window
+# Notified when something happens in one of the other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
-# zshでpbcopy
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+# Periodically refresh the status bar
+set -g status-interval 60
 
-# ステータスラインカスタム関連
-set -g status-attr dim
-set -g status-left-length 32
-set -g status-right-length 150
+# Customize what is displayed
+set -g status-justify left
+set -g status-left-length 50
+set -g status-left " #S / "
+#                     └─ current session name
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# status line を更新する間隔を 1 秒にする
-set-option -g status-interval 1
+# Default colors
+set -g status-bg green
+set -g status-fg black
 
-# window-status を中央揃えで配置する
-set-option -g status-justify "centre"
+# Colors for window list
+setw -g window-status-fg black
+setw -g window-status-bg green
+setw -g window-status-attr dim
 
-# status line の背景色を指定する。
-set-option -g status-bg "colour238"
+# Colors for active window
+setw -g window-status-current-fg black
+setw -g window-status-current-bg yellow
+setw -g window-status-current-attr dim
 
-# status line の文字色を指定する。
-set-option -g status-fg "colour255"
 
-# status-left の最大の長さを指定する。
-set-option -g status-left-length 20
+# ----------------------------------------------------------------------
+# | Visual Styling                                                     |
+# ----------------------------------------------------------------------
 
-# status-left のフォーマットを指定する。
-set-option -g status-left "#[fg=colour255,bg=colour241]Session: #S #[default]"
+# Display things in 256 colors
+set -g default-terminal "screen-256color"
 
-# status-leftのフォーマットを指定する。
-set -g status-left '#[fg=colour223,bg=colour202,bold] #20(hostname -s)#[deafult] #S #[fg=colour202,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# status_rightのフォーマットを指定する。
-set-option -g status-right '#(get_load_average_tmux)#(get_volume_tmux)#(get_battery_tmux)#(get_ssid_tmux)#[fg=colour014] %H:%M | %m/%d %a#[default]'
+# Command Line
+set -g message-fg black
+set -g message-bg green
+set -g message-attr dim
 
-# window-status のフォーマットを指定する。
-set-window-option -g window-status-format " #I: #W "
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-# カレントウィンドウの window-status のフォーマットを指定する
-set-window-option -g window-status-current-format "#[fg=colour255,bg=colour27,bold] #I: #W #[default]"
+# Pane divider
+set -g pane-active-border-bg default
+set -g pane-active-border-fg green
+set -g pane-border-bg default
+set -g pane-border-fg colour244
 
-# tmux のセッション開始時にデフォルトでpaneを切る
-bind c new-window \; source-file ~/.tmux/new-session
+run-shell ~/.tmux/bin/battery.tmux
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
