--- a/.screenrc
+++ b/.screenrc
@@ -1,12 +1,11 @@
-autodetach on
-startup_message off
-defscrollback 50000
-defmonitor on
-caption always "%{= wk} %-w%{=bu dr}%n %t%{-}%+w %= %{=b wk}[%0`] [%l] %{=b wk}%y/%m/%d %{=b wr}%c"
-backtick 0 0 0 echo ${ttyname}
+defencoding utf-8
+
+# prefix
 escape ^Tt
-termcapinfo xterm* ti@:te@
-term xterm-256color
 
+vbell on
 
+hardstatus alwayslastline '%02c:%s%{= .g}%H%{-} %L=%-w%45>%{=u g.}%n %t%{-}%+w %-17<%=%{= .y}(%l)'
 
+startup_message on
+autodetach on
