--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# tmux settings
-# http://www.openbsd.org/cgi-bin/man.cgi/OpenBSD-current/man1/tmux.1#x4f5054494f4e53
-
 # ----------------------------------------------------------------------
 # | General Settings                                                   |
 # ----------------------------------------------------------------------
@@ -13,8 +10,7 @@ setw -g pane-base-index 1
 
 # Remove delay when sending commands
 # (default is 500 milliseconds)
-set -sg escape-time 1
-
+set -sg escape-time 0
 
 # ----------------------------------------------------------------------
 # | Key Mappings                                                       |
@@ -45,8 +41,6 @@ unbind [
 bind Escape copy-mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy "v" begin-selection
-bind -t vi-copy "y" copy-selection
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
@@ -83,53 +77,53 @@ bind r source-file ~/.tmux.conf \; display "tmux configs reloaded"
 # Notified when something happens in one of the other windows
 setw -g monitor-activity on
 set -g visual-activity on
-
 # Periodically refresh the status bar
 set -g status-interval 60
-
-# Customize what is displayed
-set -g status-justify left
-set -g status-left-length 50
-set -g status-left " #S / "
-#                     └─ current session name
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-# Default colors
-set -g status-bg green
-set -g status-fg black
-
-# Colors for window list
-setw -g window-status-fg black
-setw -g window-status-bg green
-setw -g window-status-attr dim
-
-# Colors for active window
-setw -g window-status-current-fg black
-setw -g window-status-current-bg yellow
-setw -g window-status-current-attr dim
-
-
+set-option -g status-right '#(wifi) #(battery --tmux) [%Y-%m-%d(%a) %H:%M]'
+set-option -g status-position top
+set-option -g status-left-length 90
+set-option -g status-right-length 90
+# #H => マシン名
+# #P => ペイン番号
+# 最左に表示
+set-option -g status-left '#H:[#P]'
+# Wi-Fi、バッテリー残量、現在時刻
+# 最右に表示
+set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
+# ステータスバーを Utf-8 に対応
+set-option -g status-utf8 on')]))'']'
+# センタライズ（主にウィンドウ番号など）
+set-option -g status-justify centre
 # ----------------------------------------------------------------------
 # | Visual Styling                                                     |
 # ----------------------------------------------------------------------
 
-# Display things in 256 colors
-set -g default-terminal "screen-256color"
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
-# Command Line
-set -g message-fg black
-set -g message-bg green
-set -g message-attr dim
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# pane border
+set-option -g pane-border-fg colour240 #base01
+set-option -g pane-active-border-fg colour166 #orange
 
-# Pane divider
-set -g pane-active-border-bg default
-set -g pane-active-border-fg green
-set -g pane-border-bg default
-set -g pane-border-fg colour244
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
 
-run-shell ~/.tmux/bin/battery.tmux
-set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M'
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
