--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = "komei otake"
-  email = komei1220@gmail.com
+	name = komei-otake-biz
+	email = komei.otake@bizreach.co.jp
 [color]
   # colorの設定(以下のコマンドは自動で色つける)
   status = auto
