--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
 	default = current
 [core]
   excludesfile = ~/.gitignore  # globalな.gitignoreの指定
-  autocrlf = input                 # CRLFを自動変換
+  autocrlf = false                 # CRLFを自動変換
   editor = vim
   quotepath = false
 [merge]
